# fast-stock-market

./: README.md  docker-compose.yml
.github/workflows/: auth.yml  market.yml
auth/: Makefile  README.md  pyproject.toml
auth/src/auth/: asgi.py  dependencies.py  main.py  middleware.py  router.py  version.py
auth/src/auth/adapters/: db.py  motor_repositories.py  repositories.py
auth/src/auth/domain/: commands.py  events.py  models.py  schemas.py
auth/src/auth/entrypoints/: actuator.py
auth/src/auth/entrypoints/v1/: auth.py  users.py
auth/src/auth/service_layer/: auth.py  errors.py  jwt.py  register.py
auth/src/auth/settings/: mongo_settings.py
auth/tests/: conftest.py  mocks.py
auth/tests/e2e/entrypoints/: test_actuator.py
auth/tests/integration/register_service/: test_register.py
auth/tests/integration/service_layer/: test_auth_service.py
auth/tests/unit/service_layer/: test_jwt.py
etc/dashboards/: fastapi-observability.json
gateway/: README.md  requirements-dev.txt
gateway/app/: asgi.py  middleware.py  router.py  version.py
gateway/app/adapters/: network.py  redis_connector.py  telemetry.py
gateway/app/domain/commands/: auth_service.py
gateway/app/domain/events/: auth_service.py  stock_market_service.py
gateway/app/entrypoints/: actuator.py
gateway/app/entrypoints/v1/: auth_service.py  market_service.py
gateway/app/service_layer/: gateway.py
gateway/app/settings/: app_settings.py  gateway_settings.py
gateway/app/utils/: logging.py
market/: Dockerfile  README.md  pyproject.toml
market/src/market/: asgi.py  dependencies.py  main.py  router.py  version.py
market/src/market/adapters/: alphavantage_repositories.py  repositories.py
market/src/market/domain/: events.py  models.py  schemas.py
market/src/market/entrypoints/: actuator.py
market/src/market/entrypoints/v1/: stock_data.py
market/src/market/service_layer/: errors.py  stock_market.py
market/src/market/settings/: app_settings.py  uvicorn_settings.py
market/src/market/utils/: formatter.py
market/tests/: conftest.py
market/tests/unit/: test_http_client.py
