[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Tomas Sanchez <tosanchez@frba.utn.edu.ar>"]
readme = "README.md"
packages = [{include = "auth", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
