[tool.poetry]
name = "market"
version = "0.1.0"
description = ""
authors = ["Tomas Sanchez <tosanchez@frba.utn.edu.ar>"]
readme = "README.md"
packages = [{include = "market", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "^0.97.0", extras = ["all"]}
uvicorn = {version = "^0.22.0", extras = ["standard"]}
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
httpx = "^0.24.1"
aioresponses = "^0.7.4"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
